--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup mysys2
+        uses: msys2/setup-msys2@v2
         with:
           msystem: MINGW64
           update: true
