--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,5 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Menginstall Libcheck
         run: sudo apt install check
+      - name: Membuat Folder
+        run: mkdir bin build
       - name: Testing semua TC
         run: make test
