Menambahkan folder baru saat testing di deploy

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Menginstall Libcheck
         run: sudo apt install check
+      - name: Membuat Folder
+        run: mkdir bin build
       - name: Testing semua TC
         run: make test
   linux:
