--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,9 @@ jobs:
         uses: msys2/setup-msys2@v2
         with:
           msystem: MINGW64
+          install: >-
+            gcc
+            make
       - name: Membuat Folder
         run: mkdir bin build
       - name: Build Mobilita untuk Windows
