--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,11 +5,17 @@
       "label": "build",
       "type": "shell",
       "command": "make",
-      "args": ["debug"],
+      "args": ["clean", "debug"],
       "group": "build",
       "presentation": {
         "reveal": "silent"
       }
+    },
+    {
+      "label": "buildtest",
+      "type": "shell",
+      "command": "make",
+      "args": ["clean", "./bin/test"]
     }
   ]
 }
