--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,7 +35,7 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceRoot}/",
-      "args": [],
+      "args": ["-tno-fork"],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
       "environment": [],
