--- a/config.conf
+++ b/config.conf
@@ -1,23 +1,26 @@
+MAP
 10 15
+BLD
 17
-1 1
-A 10 1
-B 1 15
-C 1 9
-D 1 13
-E 2 3
-F 3 1
-G 3 8
-H 3 14
-I 4 5
-J 5 12
-K 6 3
-L 7 10
-M 8 2
-N 8 6
-O 8 15
-P 9 13
-Q 10 3
+01 01
+A 10 01
+B 01 15
+C 01 09
+D 01 13
+E 02 03
+F 03 01
+G 03 08
+H 03 14
+I 04 05
+J 05 12
+K 06 03
+L 07 10
+M 08 02
+N 08 06
+O 08 15
+P 09 13
+Q 10 03
+ADJ
 0 0 0 1 0 1 1 0 0 0 0 0 0 0 0 0 0 0
 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 1
 0 0 0 0 1 0 0 0 1 0 0 0 0 0 0 0 0 0
@@ -36,14 +39,15 @@ Q 10 3
 0 0 0 0 0 0 0 0 1 0 1 0 0 0 0 0 1 0
 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 1 0 0
 0 1 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0
+ORD
 10
-1 G N N
-3 G N H
-2 B M N
-1 M B H
-5 C D N
-3 F E N
+01 G N N
+03 G N H
+02 B M N
+01 M B H
+05 C D N
+03 F E N
 10 P Q P 20
-5 G N P 10
-8 O P V
-8 Q L V
+05 G N P 10
+08 O P V
+08 Q L V
