--- a/save.conf
+++ b/save.conf
@@ -38,6 +38,13 @@ Q 10 03 #
 0 0 0 0 0 0 0 0 1 0 1 0 0 0 0 0 1 0
 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 1 0 0
 0 1 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0
+REACHABLE
+03
+C 01 09 #
+E 02 03 #
+F 03 01 #
+CURRENT_POSITION
+8 01 01 #
 ORD
 10
 00 01 G N N
@@ -54,12 +61,13 @@ CURRENT_TIME
 00
 CURRENT_MONEY
 00
-CURRENT_POSITION
-8 01 01 #
+BACK_TO_SENDER
+00
 INVENTORY_GADGET
 00
 TAS_MOBITA
 03
+00
 TO_DO_LIST
 00
 PROGRESS_LIST
