Pickup sudah bisa untuk perishable item

--- a/config2.conf
+++ b/config2.conf
@@ -3,23 +3,24 @@ MAP
 BLD
 17
 01 01
-A 10 01 #
-B 01 15 #
-C 01 09 #
-D 01 13 #
-E 02 03 #
-F 03 01 #
-G 03 08 #
-H 03 14 #
-I 04 05 #
-J 05 12 #
-K 06 03 #
-L 07 10 #
-M 08 02 #
-N 08 06 #
-O 08 15 #
-P 09 13 #
-Q 10 03 #
+A 10 01
+B 01 15
+C 01 09
+D 01 13
+E 02 03
+F 03 01
+G 03 08
+H 03 14
+I 04 05
+J 05 12
+K 06 03
+L 07 10
+M 08 02
+N 08 06
+O 08 15
+P 09 13
+Q 10 03
+ADJ
 0 0 0 1 0 1 1 0 0 0 0 0 0 0 0 0 0 0
 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 1
 0 0 0 0 1 0 0 0 1 0 0 0 0 0 0 0 0 0
@@ -38,37 +39,7 @@ Q 10 03 #
 0 0 0 0 0 0 0 0 1 0 1 0 0 0 0 0 1 0
 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 1 0 0
 0 1 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0
-REACHABLE
-03
-C
-E
-F
-CURRENT_POSITION
-8
 ORD
-10
-00 01 G N 0-1 00 N
-03 01 M B 0-1 03 H
-02 02 B M 0-1 02 N
-01 03 G N 0-1 01 H
-05 03 F E 0-1 05 N
-04 05 C D 0-1 04 N
-07 05 G N 0-1 07 P 10
-08 08 O P 0-1 08 V
-09 08 Q L 0-1 09 V
-06 10 P Q 0-1 06 P 20
-CURRENT_TIME
-19
-CURRENT_MONEY
-9000
-BACK_TO_SENDER
-01
-INVENTORY_GADGET
-00
-TAS_MOBITA
-03
-00
-TO_DO_LIST
-00
-PROGRESS_LIST
-00
+2
+01 E Q P 20
+01 E N P 02
